# QuantAura

./: .dockerignore  .env.example  .gitignore  README.md  docker-compose.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
core/: .dockerignore  Cargo.toml  Dockerfile
core/migration/: Cargo.toml
core/migration/src/: lib.rs  m20260409_000001_create_users.rs  m20260409_000002_create_llm_providers.rs  m20260409_000003_create_llm_models.rs  m20260409_000004_create_exchanges.rs  m20260409_000005_create_strategies.rs  m20260409_000006_create_backtest_runs.rs  m20260409_000007_create_backtest_equity.rs  m20260409_000008_create_backtest_trades.rs  m20260409_000009_create_backtest_decisions.rs  m20260409_000010_create_traders.rs  m20260409_000011_create_trader_accounts.rs  m20260409_000012_create_trader_positions.rs  m20260409_000013_create_trader_orders.rs  m20260409_000014_create_order_fills.rs  m20260409_000015_create_trader_trades.rs  m20260409_000016_create_execution_intents.rs  m20260409_000017_create_runtime_events.rs  m20260409_000018_create_runtime_alert_history.rs  m20260409_000019_create_runtime_alert_controls.rs  m20260409_000020_create_runtime_alert_delivery_log.rs  m20260409_000021_create_trader_decisions.rs  m20260409_000022_create_debates.rs  m20260409_000023_create_debate_messages.rs
core/src/: clients.rs  config.rs  contracts.rs  database.rs  entity.rs  error.rs  http.rs  lib.rs  main.rs  realtime.rs  repositories.rs  routes.rs  runtime_events.rs  services.rs  state.rs  time.rs
core/src/clients/: binance.rs  bitget.rs  exchanges.rs  hyperliquid.rs  llm_chat.rs  market_data.rs  model_info.rs  okx.rs  outbound_http.rs
core/src/contracts/: auth.rs  backtest.rs  debates.rs  exchanges.rs  models.rs  public.rs  strategies.rs  system.rs  trading.rs
core/src/entity/: backtest_decisions.rs  backtest_equity.rs  backtest_runs.rs  backtest_trades.rs  debate_messages.rs  users.rs  (+18 more)
core/tests/: integration_test.rs
(+260 files in other folders)
