[workspace]
members = [".", "migration"]

[package]
name = "amaryllis"
version = "0.1.0"
edition = "2024"
description = "Backend rewritten with Axum"
license = "AGPL-3.0"

[lib]
name = "amaryllis"
path = "src/lib.rs"

[[bin]]
name = "amaryllis"
path = "src/main.rs"

[dependencies]
axum = { version = "0.8", features = ["macros", "ws"] }
axum-extra = { version = "0.10", features = ["typed-header"] }
tokio = { version = "1.44", features = ["rt-multi-thread", "macros", "signal", "time"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace", "compression-full", "timeout"] }

serde = { version = "1", features = ["derive"] }
serde_json = "1"

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }

thiserror = "2"

dotenvy = "0.15"
chrono = { version = "0.4", features = ["serde", "clock"] }
uuid = { version = "1", features = ["v7", "serde"] }

reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
async-trait = "0.1"
futures-util = "0.3"
tokio-tungstenite = { version = "0.23", default-features = false, features = ["connect", "rustls-tls-webpki-roots"] }

hmac = "0.12"
sha2 = "0.10"
sha3 = "0.10"
k256 = { version = "0.13", features = ["ecdsa"] }
hex = "0.4"
base64 = "0.22"
rmp-serde = "1"

sea-orm = { version = "1.1.19", default-features = false, features = [
  "runtime-tokio-rustls",
  "sqlx-sqlite",
  "macros",
  "with-chrono",
  "with-rust_decimal",
  "with-uuid",
  "with-json"
] }
migration = { path = "./migration" }
rust_decimal = { version = "1", features = ["serde"] }

jsonwebtoken = { version = "10", features = ["rust_crypto"] }
bcrypt = "0.17"
rand = { version = "0.10", features = ["sys_rng"] }
envconfig = "0.11.1"

[dev-dependencies]
http-body-util = "0.1"
tower = { version = "0.5", features = ["util"] }
